# tg2hdl

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  UNROLLING_PLAN.md  benchmark.py  compare_inference.py  conftest.py  gemv_test.vcd  inspect_kernels.py  inspect_pipeline.py  main.py  mkdocs.yml  mnist_weights.safetensors  netlify.toml  pyproject.toml  test.txt  train_mnist.py
.github/workflows/: docs-gh-pages.yml  test.yml
benchmarks/: harness.py  scoreboard.py  test_perf_suite.py  test_suite.py
compiler/: __init__.py  backend.py  fp32.py  hdl_module.py  ir.py  pcie_dma.py  top_module.py  transforms.py  uop_to_ir.py  utils.py  visualize.py  wishbone_wrapper.py
compiler/lowering/: __init__.py  arithmetic.py  control.py
docs/: .gitignore  benchmark_guide.md  conf.py  index.md  index.rst  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/_static/: custom.css
docs/_templates/: base.html  layout.html
docs/guide/: architecture.md  (+7 more)
examples/: demo_benchmark.py  demo_benchmark_branch_dag.py  demo_benchmark_large_matmul.py  demo_benchmark_mlp3.py
fpga_cards/: lattice_ecp5_45k_cabga381.json
hdl/: __init__.py  gemv.py  relu.py
tests/: test_add.py  test_bias.py  test_branched_correctness.py  test_combined.py  test_compiler.py  test_conv2d.py  test_easy_ops.py  test_fp32.py  test_fp32_complex.py  test_gemv.py  test_mul.py  test_relu.py  test_scoreboard.py  test_tg2hdl_report.py  test_top_module.py  test_unroll.py  test_unrolling_options.py  test_visualize.py
tg2hdl/: __init__.py  fpga_card.py  report.py
utils/: __init__.py  quantization.py
(+1 files in other folders)
