[project]
name = "ml-kernels-hdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amaranth>=0.5.4",
    "numpy>=2.4.2",
    "tinygrad>=0.12.0",
]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "pytest>=8.0",
    "sphinx>=9.1.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (large simulations)",
]
